[gd_scene load_steps=59 format=2]

[ext_resource path="res://Assets/Stalker/Untitled_10-19-2022_04-48-08.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/enemyhurt.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/circle-blood.png" type="Texture" id=4]
[ext_resource path="res://Assets/fill health.png" type="Texture" id=5]
[ext_resource path="res://Assets/SFX/enemy death.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/underhealth.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/eneymshoot.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Stalker/Untitled_10-19-2022_04-48-08_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Stalker/Untitled_10-19-2022_04-48-08_3.png" type="Texture" id=10]

[sub_resource type="Shader" id=24]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(TEXTURE,UV);
	color.rgb = mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=33]
resource_local_to_scene = true
shader = SubResource( 24 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 10 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 10 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 10 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 10 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 10 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 10 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 8.0
height = 21.284

[sub_resource type="Animation" id=74]
resource_name = "Death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=34]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "new_shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=27]
radius = 12.5113
height = 22.0

[sub_resource type="CircleShape2D" id=32]
radius = 132.034

[sub_resource type="Gradient" id=35]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.423237, 0.672199, 1 )
colors = PoolColorArray( 0.188235, 0.0156863, 0.0431373, 0.811765, 1, 0.513726, 0, 1, 1, 0.513726, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=36]
gradient = SubResource( 35 )

[sub_resource type="Curve" id=37]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.1, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=38]
curve = SubResource( 37 )

[sub_resource type="ParticlesMaterial" id=39]
emission_shape = 1
emission_sphere_radius = 11.67
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 42.95
radial_accel_random = 0.06
angle = 720.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 38 )
color_ramp = SubResource( 36 )
hue_variation = -0.06
hue_variation_random = 1.0

[node name="ShootingEnemy" type="KinematicBody2D" groups=["enemy_group"]]
z_index = 2
collision_layer = 16
collision_mask = 20
script = ExtResource( 2 )
damage = 15
additional_proj_damage = 5
more_health = 750
min_money = 30
max_money = 50
ruby_chance = 16.66
min_speed = 0
max_speed = -5
how_much_slower = 5
should_rotate = true
should_have_death_anim = true
should_stay_away = true
should_slow_down_on_proj_hit = true
bullet_sprite = "Skull"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 33 )
scale = Vector2( 1.06865, 1.06865 )
frames = SubResource( 73 )
offset = Vector2( -4.54, -3.038 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.358 )
shape = SubResource( 26 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 2, -8 )

[node name="reload" type="Timer" parent="."]

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -11.361
attenuation = 4.43828
bus = "SoundEffects"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -9.613
attenuation = 4.43828
bus = "SoundEffects"

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -7.866
attenuation = 4.43828
bus = "SoundEffects"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.5, 0.75 )
scale = Vector2( 0.35, 0.725 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/Death = SubResource( 74 )
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 34 )
anims/new_shoot = SubResource( 25 )

[node name="timer2" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -11.0
margin_top = -26.0
margin_right = 11.0
margin_bottom = -18.0
value = 100.0
rounded = true
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="bite_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.136, -2.235 )
scale = Vector2( 0.97, 0.949 )
shape = SubResource( 27 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.435294 )
position = Vector2( 1.78814e-07, 23.792 )
scale = Vector2( 1.25, 0.15625 )
z_index = -1
texture = ExtResource( 4 )

[node name="burn_timer" type="Timer" parent="."]
one_shot = true

[node name="burn_tick" type="Timer" parent="."]
wait_time = 0.15

[node name="time_to_catch_on_fire" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="damage" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="flames_shield" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="FleeArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeArea"]
shape = SubResource( 32 )

[node name="FlameParticles" type="Particles2D" parent="."]
modulate = Color( 2, 1, 1, 1 )
show_behind_parent = true
position = Vector2( -1, 1 )
z_index = 1
emitting = false
amount = 50
local_coords = false
process_material = SubResource( 39 )

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="timer2" to="." method="_on_timer2_timeout"]
[connection signal="timeout" from="bite_timer" to="." method="_on_bite_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="burn_timer" to="." method="_on_burn_timer_timeout"]
[connection signal="timeout" from="burn_tick" to="." method="_on_burn_tick_timeout"]
[connection signal="timeout" from="time_to_catch_on_fire" to="." method="_on_time_to_catch_on_fire_timeout"]
[connection signal="timeout" from="damage" to="." method="_on_damage_timeout"]
[connection signal="timeout" from="flames_shield" to="." method="_on_flames_shield_timeout"]
[connection signal="body_entered" from="FleeArea" to="." method="_on_FleeArea_body_entered"]
[connection signal="body_exited" from="FleeArea" to="." method="_on_FleeArea_body_exited"]
